--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ target_link_libraries(ssd1306_i2c
         pico_stdlib 
         hardware_i2c 
         hardware_adc 
+        hardware_pwm
         pico_cyw43_arch_lwip_threadsafe_background
         )
 
